<resources>
    <string name="app_name">PerintisMitraApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illustartion_login">illustartion login</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="daftar_mitra">Daftar Mitra</string>
    <string name="masukkan_email_yang_telah_terdaftar">Masukkan email yang telah terdaftar</string>
    <string name="illustration_reset_password">illustration reset password</string>
    <string name="silahkan_cek_email_untuk_reset_password">Silahkan cek email untuk reset password</string>
    <string name="illustration_reset_password_info">illustration reset password info</string>
    <string name="kembali_login">Kembali Login</string>
    <string name="pengajuan_nmitra">Pengajuan\nMitra</string>
    <string name="illustartion_register">illustartion register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="telephone">Telephone</string>
    <string name="merk_mobil">Merk Mobil</string>
    <string name="transmisi">Transmisi</string>
    <string name="tahun">Tahun</string>
    <string name="nomer_registrasi_kendaraan">Nomer Registrasi Kendaraan</string>
    <string name="gambar_mobil_yang_diajukan">Gambar mobil yang diajukan</string>
    <string name="image_car">image car</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="saya_setuju_dengan_syarat_dan_ketentuan_yang_berlaku">Saya setuju dengan syarat dan ketentuan yang berlaku</string>
    <string name="download_dokumen">Download Dokumen</string>
    <string name="kirim_pengajuan">Kirim Pengajuan</string>
    <string name="pengajuan_mitra_berhasil">Pengajuan Mitra Berhasil</string>
    <string name="tunggu_pemberitahuan_dari_admin_maksimal_3x24_jam_yang_akan_dihubungi_lewat_email_atau_telepon_yang_anda_diajukan">Tunggu pemberitahuan dari admin maksimal 3x24 jam yang akan dihubungi lewat email atau telepon yang anda diajukan</string>
    <string name="illustration_register_info">illustration register info</string>
    <string name="dashboard">Dashboard</string>
    <string name="icon_notification">icon_notification</string>
    <string name="image_profile_dashboard">Image Profile Dashboard</string>
    <string name="icon_setting">icon setting</string>
    <string name="total_booking">Total Booking</string>
    <string name="mobil_terdaftar">Mobil Terdaftar</string>
    <string name="image_dashboard_car">image dashboard car</string>
    <string name="tambah_mobil_yang_anda_sewa_dengan_mendaftarkannya_disini">Tambah mobil yang anda sewa dengan mendaftarkannya disini</string>
    <string name="pengajuan_mobil">Pengajuan Mobil</string>
    <string name="daftar_penyewa_mobil_anda">Daftar penyewa mobil anda</string>
    <string name="disewa">Disewa</string>
    <string name="daftar_mobil_anda">Daftar Mobil Anda</string>
    <string name="mobil">Mobil</string>
    <string name="image_register_car">image register car</string>
    <string name="image_car_booked">image car booked</string>
    <string name="image_profile">image profile</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>

    //Error message
    <string name="error_message_password">Password yang anda masukkan salah!</string>
    <string name="error_message_password_from_firebase">The password is invalid or the user does not have a password.</string>
    <string name="error_message_email_not_register">Akun anda tidak terdaftar mitra perintis!</string>
    <string name="simpan">Simpan</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="ganti_password">Ganti Password</string>
</resources>