<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.resetpassword.ResetPasswordInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="120dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_cek_email_untuk_reset_password"/>
        
        <ImageView
            android:layout_width="200dp"
            android:layout_height="185dp"
            android:src="@drawable/illustration_reset_password_info"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/illustration_reset_password_info" />

        <Button
            android:id="@+id/btnToLogin"
            style="@style/ButtonPrimary"
            android:text="@string/kembali_login"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="40dp"/>

    </LinearLayout>

</FrameLayout>