<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.registerpartners.RegisterPartnerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginHorizontal="45dp"
                tools:ignore="UselessParent">
                
                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="115dp"
                    android:layout_weight="1"
                    android:src="@drawable/illustration_register"
                    android:layout_marginEnd="4dp"
                    android:contentDescription="@string/illustartion_register" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="4dp"
                    android:text="@string/pengajuan_nmitra"
                    android:textSize="24sp"
                    android:layout_gravity="bottom"/>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nama_lengkap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_name_register"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_address_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="Alamat Lengkap"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_address_register"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_register"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/telephone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_register"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_car_brand_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/merk_mobil"
                app:endIconMode="dropdown_menu"
                app:endIconDrawable="@drawable/ic_drop_down"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_car_type_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="Type Mobil"
                app:endIconMode="dropdown_menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_transmission_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/transmisi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_year_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/tahun"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_year_register"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_number_car_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/nomer_registrasi_kendaraan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_number_car_register"
                    android:inputType="phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="45dp"
                android:text="@string/gambar_mobil_yang_diajukan"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="4dp"
                android:elevation="4dp">

                <ImageView
                    android:id="@+id/img_car"
                    android:src="@color/colorDivider"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/image_car" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_add_image_register"
                style="@style/ButtonOutline"
                android:text="@string/pilih_gambar"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="8dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="24dp"
                android:text="@string/saya_setuju_dengan_syarat_dan_ketentuan_yang_berlaku"/>

            <Button
                android:id="@+id/btn_download_doc"
                style="@style/ButtonOutline"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="8dp"
                android:text="@string/download_dokumen"/>

            <Button
                android:id="@+id/btn_send_register"
                style="@style/ButtonPrimary"
                android:text="@string/kirim_pengajuan"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="25dp"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>