<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:weightSum="2"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:gravity="end">
                    <ImageView
                        android:layout_width="140dp"
                        android:layout_height="155dp"
                        android:src="@drawable/illustration_login"
                        android:contentDescription="@string/illustartion_login" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="8dp"
                    android:layout_gravity="bottom">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="36sp"/>

                </RelativeLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimary"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/colorPrimary"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:text="@string/masuk"
                android:enabled="false"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="30dp"
                style="@style/ButtonPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_height="wrap_content"
                        android:text="@string/lupa_password"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">
                    <Button
                        android:id="@+id/btnResetPassword"
                        android:layout_width="wrap_content"
                        android:text="@string/reset_password"
                        android:layout_centerVertical="true"
                        style="@style/ButtonOutline"/>
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnToRegister"
                style="@style/ButtonOutline"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="40dp"
                android:text="@string/daftar_mitra"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>