<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.resetpassword.ResetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent"
        android:layout_marginTop="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:textSize="26sp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_email_yang_telah_terdaftar"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:textColor="@color/colorPrimaryText"/>
            
            <ImageView
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:src="@drawable/illustration_reset_password"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/illustration_reset_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_edt_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="45dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_reset_password"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_reset_password"
                style="@style/ButtonPrimary"
                android:enabled="false"
                android:layout_marginTop="30dp"
                android:text="@string/reset_password"
                android:layout_marginHorizontal="45dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>