<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.registerpartners.RegisterPartnerInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="90dp"
            android:layout_marginHorizontal="45dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengajuan_mitra_berhasil"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tunngu_pemberitahuan_dari_admin_maksimal_3x24_jam_yang_akan_dihubungi_lewat_email_atau_telepon_yang_anda_diajukan"
                android:textAlignment="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimaryText"/>
            
            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:src="@drawable/illustration_register_info"
                android:contentDescription="@string/illustration_register_info"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btnToLogin"
                style="@style/ButtonPrimary"
                android:text="@string/kembali_login"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>