<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.profile.editprofile.EdtiProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.github.florent37.shapeofview.shapes.CircleView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="4dp">

                <ImageView
                    android:id="@+id/img_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:src="@color/colorYellow"
                    android:contentDescription="@string/image_profile"
                    android:scaleType="centerCrop" />

            </com.github.florent37.shapeofview.shapes.CircleView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="60dp"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_baseline_add_24" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="180dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_profile_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/nama_lengkap"
            app:layout_constraintBottom_toTopOf="@+id/layout_edt_profile_phone"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintVertical_chainStyle="packed"
            tools:layout_editor_absoluteX="44dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_profile_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/telephone"
            app:layout_constraintBottom_toTopOf="@+id/layout_edt_profile_address"
            app:layout_constraintEnd_toEndOf="@+id/layout_edt_profile_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/layout_edt_profile_name"
            app:layout_constraintTop_toBottomOf="@+id/layout_edt_profile_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_profile_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="40dp"
            android:hint="@string/alamat_lengkap"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_edt_profile"
            app:layout_constraintEnd_toEndOf="@+id/layout_edt_profile_phone"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/layout_edt_profile_phone"
            app:layout_constraintTop_toBottomOf="@+id/layout_edt_profile_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save_edt_profile"
            style="@style/ButtonPrimary"
            android:layout_marginHorizontal="45dp"
            android:layout_marginBottom="50dp"
            android:text="@string/simpan"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/layout_edt_profile_address"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layout_edt_profile_address"
            app:layout_constraintTop_toBottomOf="@+id/layout_edt_profile_address" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>